; ModuleID = '/home/carl/AnghaBench/git/refs/extr_packed-backend.c_get_snapshot.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_packed-backend.c_get_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snapshot = type { i32 }
%struct.packed_ref_store = type { %struct.snapshot*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.snapshot* (%struct.packed_ref_store*)* @get_snapshot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.snapshot* @get_snapshot(%struct.packed_ref_store* %0) #0 {
  %2 = alloca %struct.packed_ref_store*, align 8
  store %struct.packed_ref_store* %0, %struct.packed_ref_store** %2, align 8
  %3 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %4 = getelementptr inbounds %struct.packed_ref_store, %struct.packed_ref_store* %3, i32 0, i32 1
  %5 = call i32 @is_lock_file_locked(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %9 = call i32 @validate_snapshot(%struct.packed_ref_store* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %12 = getelementptr inbounds %struct.packed_ref_store, %struct.packed_ref_store* %11, i32 0, i32 0
  %13 = load %struct.snapshot*, %struct.snapshot** %12, align 8
  %14 = icmp ne %struct.snapshot* %13, null
  br i1 %14, label %20, label %15

15:                                               ; preds = %10
  %16 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %17 = call %struct.snapshot* @create_snapshot(%struct.packed_ref_store* %16)
  %18 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %19 = getelementptr inbounds %struct.packed_ref_store, %struct.packed_ref_store* %18, i32 0, i32 0
  store %struct.snapshot* %17, %struct.snapshot** %19, align 8
  br label %20

20:                                               ; preds = %15, %10
  %21 = load %struct.packed_ref_store*, %struct.packed_ref_store** %2, align 8
  %22 = getelementptr inbounds %struct.packed_ref_store, %struct.packed_ref_store* %21, i32 0, i32 0
  %23 = load %struct.snapshot*, %struct.snapshot** %22, align 8
  ret %struct.snapshot* %23
}

declare dso_local i32 @is_lock_file_locked(i32*) #1

declare dso_local i32 @validate_snapshot(%struct.packed_ref_store*) #1

declare dso_local %struct.snapshot* @create_snapshot(%struct.packed_ref_store*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
